docs/7.52/md/abensap_hana_access.md
---
title: "Access to Objects in SAP HANA XS"
description: |
  SAP HANA XS(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenxs_glosry.htm 'Glossary Entry') (SAP HANA Extended Application Services) covers tools used to develop, manage, and execute native objects on the SAP HANA platform. This section describes the different ways of accessing SAP
version: "7.52"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensap_hana_access.htm"
abapFile: "abensap_hana_access.htm"
keywords: ["do", "if", "try", "method", "data", "abensap", "hana", "access"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_external_data.htm) →  [ABAP Database Accesses](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_sql.htm) →  [ABAP and SAP HANA](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_hana.htm) → 

Access to Objects in SAP HANA XS

[SAP HANA XS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenxs_glosry.htm "Glossary Entry") (SAP HANA Extended Application Services) covers tools used to develop, manage, and execute native objects on the SAP HANA platform. This section describes the different ways of accessing SAP HANA XS objects from ABAP programs. Two SAP HANA XS versions are distinguished here:

-   The current [SAP HANA XSA](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensap_hana_access_xsa.htm)

-   The preceding [SAP HANA XSC](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensap_hana_access_xsc.htm)

Note

[SAP HANA XSA](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenxsa_glosry.htm "Glossary Entry") replaces [SAP HANA XSC](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenxsc_glosry.htm "Glossary Entry"). The [access methods](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensap_hana_access_xsc.htm) designed specifically for XSC objects are not suitable for XSA objects. After all XSC objects are migrated to XSA, the access methods designed for XSC are mostly obsolete. More information can be found in [SAP Note 2465027](https://launchpad.support.sap.com/#/notes/2465027).

Continue
[Access to SAP HANA XSA Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensap_hana_access_xsa.htm)
[Access to SAP HANA XSC Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensap_hana_access_xsc.htm)